docs: refresh full documentation set for stable runtime